--- a/public/list.html
+++ b/public/list.html
@@ -15,12 +15,13 @@
     </div>
     <div class="container">
         <ul class="list-group">
-            <li ng-repeat="venue in venues.businesses" class="list-group-item">
+            <li ng-repeat="venue in venues" class="list-group-item">
                 <img src="{{venue.image_url}}" class="img-thumbnail img-responsive img-rounded">
-                <span class="badge">0 going</span>
+                <span class="badge">{{venue.going}} going</span>
                 <a href="{{venue.url}}" target="_blank">{{venue.name}}</a>
                 <p>{{venue.snippet_text}}</p>
             </li>
         </ul>
     </div>
+    {{venues}}
 </div>
