--- a/public/list.html
+++ b/public/list.html
@@ -17,11 +17,11 @@
         <ul class="list-group">
             <li ng-repeat="venue in venues" class="list-group-item">
                 <img src="{{venue.image_url}}" class="img-thumbnail img-responsive img-rounded">
-                <span class="badge">{{venue.going}} going</span>
+                <span class="badge" ng-click="findGoing(venue.name)">{{venue.going}} going</span>
                 <a href="{{venue.url}}" target="_blank">{{venue.name}}</a>
                 <p>{{venue.snippet_text}}</p>
+                <p>{{venue.users}}</p>
             </li>
         </ul>
     </div>
-    {{venues}}
 </div>
