--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
         <!--link custom CSS file-->
         <link rel="stylesheet" type="text/css" href="/css/style.css">
         <script src="/js/app.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet"> 
     </head>
     
     
